miniJava.output
Grammar

    0 $accept: Program $end

    1 Program: MainClass
    2        | MainClass ClassDecls

    3 ClassDecls: ClassDecl
    4           | ClassDecls ClassDecl

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    6 ClassDecl: CLASS ID '{' VarDecls MethodDecls '}'
    7          | CLASS ID '{' MethodDecls '}'
    8          | CLASS ID '{' VarDecls '}'
    9          | CLASS ID '{' '}'
   10          | CLASS ID EXTENDS ID '{' VarDecls MethodDecls '}'
   11          | CLASS ID EXTENDS ID '{' MethodDecls '}'
   12          | CLASS ID EXTENDS ID '{' VarDecls '}'
   13          | CLASS ID EXTENDS ID '{' '}'

   14 VarDecls: VarDecl
   15         | VarDecls VarDecl

   16 MethodDecls: MethodDecl
   17            | MethodDecls MethodDecl

   18 VarDecl: Type ID ';'

   19 MethodDecl: PUBLIC Type ID '(' FormalList ')' '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type ID '(' FormalList ')' '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC Type ID '(' FormalList ')' '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type ID '(' FormalList ')' '{' RETURN Exp ';' '}'

   23 FormalList: Type ID FormalRests
   24           | Type ID
   25           | /* empty */

   26 FormalRests: FormalRest
   27            | FormalRests FormalRest

   28 FormalRest: ',' Type ID

   29 Statements: Statement
   30           | Statements Statement

   31 Type: INT '[' ']'
   32     | INT
   33     | BOOLEAN
   34     | STRING
   35     | VOID
   36     | ID

   37 Statement: '{' Statements '}'
   38          | IF '(' Exp ')' Statement ELSE Statement
   39          | WHILE '(' Exp ')' Statement
   40          | SYSTEMOUTPRINTLN '(' Exp ')' ';'
   41          | ID '=' Exp ';'
   42          | ID '[' Exp ']' '=' Exp ';'

   43 Exp: ExpLength
   44    | ExpMethodCall
   45    | ExpNewIntArray
   46    | ExpNewCustomType
   47    | ExpSquareBrackets
   48    | ExpRoundBrackets
   49    | ExpNot
   50    | ExpNumber
   51    | ExpId
   52    | ExpSingle
   53    | ExpBinOperation

   54 ExpLength: Exp '.' LENGTH

   55 ExpMethodCall: Exp '.' ID '(' ExpList ')'

   56 ExpNewIntArray: NEW INT '[' Exp ']'

   57 ExpNewCustomType: NEW ID '(' ')'

   58 ExpSquareBrackets: Exp '[' Exp ']'

   59 ExpRoundBrackets: '(' Exp ')'

   60 ExpNot: '!' Exp

   61 ExpBinOperation: Exp '<' Exp
   62                | Exp AND Exp
   63                | Exp '-' Exp
   64                | Exp '+' Exp
   65                | Exp '/' Exp
   66                | Exp '*' Exp

   67 ExpNumber: NUMBER

   68 ExpId: ID

   69 ExpSingle: TRUE
   70          | FALSE
   71          | THIS

   72 ExpList: Exp ExpRests
   73        | Exp
   74        | /* empty */

   75 ExpRests: ExpRest
   76         | ExpRests ExpRest

   77 ExpRest: ',' Exp


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'(' (40) 5 19 20 21 22 38 39 40 55 57 59
')' (41) 5 19 20 21 22 38 39 40 55 57 59
'*' (42) 66
'+' (43) 64
',' (44) 28 77
'-' (45) 63
'.' (46) 54 55
'/' (47) 65
';' (59) 18 19 20 21 22 40 41 42
'<' (60) 61
'=' (61) 41 42
'[' (91) 5 31 42 56 58
']' (93) 5 31 42 56 58
'{' (123) 5 6 7 8 9 10 11 12 13 19 20 21 22 37
'}' (125) 5 6 7 8 9 10 11 12 13 19 20 21 22 37
error (256)
AND (258) 62
NUMBER (259) 67
ID (260) 5 6 7 8 9 10 11 12 13 18 19 20 21 22 23 24 28 36 41 42 55
    57 68
CLASS (261) 5 6 7 8 9 10 11 12 13
EXTENDS (262) 10 11 12 13
PUBLIC (263) 5 19 20 21 22
RETURN (264) 19 20 21 22
IF (265) 38
ELSE (266) 38
BOOLEAN (267) 33
INT (268) 31 32 56
WHILE (269) 39
SYSTEMOUTPRINTLN (270) 40
LENGTH (271) 54
TRUE (272) 69
FALSE (273) 70
THIS (274) 71
NEW (275) 56 57
VOID (276) 5 35
STATIC (277) 5
MAIN (278) 5
STRING (279) 5 34


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Program (42)
    on left: 1 2, on right: 0
ClassDecls (43)
    on left: 3 4, on right: 2 4
MainClass (44)
    on left: 5, on right: 1 2
ClassDecl (45)
    on left: 6 7 8 9 10 11 12 13, on right: 3 4
VarDecls (46)
    on left: 14 15, on right: 6 8 10 12 15 19 21
MethodDecls (47)
    on left: 16 17, on right: 6 7 10 11 17
VarDecl (48)
    on left: 18, on right: 14 15
MethodDecl (49)
    on left: 19 20 21 22, on right: 16 17
FormalList (50)
    on left: 23 24 25, on right: 19 20 21 22
FormalRests (51)
    on left: 26 27, on right: 23 27
FormalRest (52)
    on left: 28, on right: 26 27
Statements (53)
    on left: 29 30, on right: 19 20 30 37
Type (54)
    on left: 31 32 33 34 35 36, on right: 18 19 20 21 22 23 24 28
Statement (55)
    on left: 37 38 39 40 41 42, on right: 5 29 30 38 39
Exp (56)
    on left: 43 44 45 46 47 48 49 50 51 52 53, on right: 19 20 21 22
    38 39 40 41 42 54 55 56 58 59 60 61 62 63 64 65 66 72 73 77
ExpLength (57)
    on left: 54, on right: 43
ExpMethodCall (58)
    on left: 55, on right: 44
ExpNewIntArray (59)
    on left: 56, on right: 45
ExpNewCustomType (60)
    on left: 57, on right: 46
ExpSquareBrackets (61)
    on left: 58, on right: 47
ExpRoundBrackets (62)
    on left: 59, on right: 48
ExpNot (63)
    on left: 60, on right: 49
ExpBinOperation (64)
    on left: 61 62 63 64 65 66, on right: 53
ExpNumber (65)
    on left: 67, on right: 50
ExpId (66)
    on left: 68, on right: 51
ExpSingle (67)
    on left: 69 70 71, on right: 52
ExpList (68)
    on left: 72 73 74, on right: 55
ExpRests (69)
    on left: 75 76, on right: 72 76
ExpRest (70)
    on left: 77, on right: 75 76


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    5 MainClass: CLASS . ID '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    ID  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass .
    2        | MainClass . ClassDecls

    CLASS  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecls  go to state 7
    ClassDecl   go to state 8


State 4

    5 MainClass: CLASS ID . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    '{'  shift, and go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    6 ClassDecl: CLASS . ID '{' VarDecls MethodDecls '}'
    7          | CLASS . ID '{' MethodDecls '}'
    8          | CLASS . ID '{' VarDecls '}'
    9          | CLASS . ID '{' '}'
   10          | CLASS . ID EXTENDS ID '{' VarDecls MethodDecls '}'
   11          | CLASS . ID EXTENDS ID '{' MethodDecls '}'
   12          | CLASS . ID EXTENDS ID '{' VarDecls '}'
   13          | CLASS . ID EXTENDS ID '{' '}'

    ID  shift, and go to state 10


State 7

    2 Program: MainClass ClassDecls .
    4 ClassDecls: ClassDecls . ClassDecl

    CLASS  shift, and go to state 6

    $default  reduce using rule 2 (Program)

    ClassDecl  go to state 11


State 8

    3 ClassDecls: ClassDecl .

    $default  reduce using rule 3 (ClassDecls)


State 9

    5 MainClass: CLASS ID '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    PUBLIC  shift, and go to state 12


State 10

    6 ClassDecl: CLASS ID . '{' VarDecls MethodDecls '}'
    7          | CLASS ID . '{' MethodDecls '}'
    8          | CLASS ID . '{' VarDecls '}'
    9          | CLASS ID . '{' '}'
   10          | CLASS ID . EXTENDS ID '{' VarDecls MethodDecls '}'
   11          | CLASS ID . EXTENDS ID '{' MethodDecls '}'
   12          | CLASS ID . EXTENDS ID '{' VarDecls '}'
   13          | CLASS ID . EXTENDS ID '{' '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    4 ClassDecls: ClassDecls ClassDecl .

    $default  reduce using rule 4 (ClassDecls)


State 12

    5 MainClass: CLASS ID '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    STATIC  shift, and go to state 15


State 13

   10 ClassDecl: CLASS ID EXTENDS . ID '{' VarDecls MethodDecls '}'
   11          | CLASS ID EXTENDS . ID '{' MethodDecls '}'
   12          | CLASS ID EXTENDS . ID '{' VarDecls '}'
   13          | CLASS ID EXTENDS . ID '{' '}'

    ID  shift, and go to state 16


State 14

    6 ClassDecl: CLASS ID '{' . VarDecls MethodDecls '}'
    7          | CLASS ID '{' . MethodDecls '}'
    8          | CLASS ID '{' . VarDecls '}'
    9          | CLASS ID '{' . '}'

    ID       shift, and go to state 17
    PUBLIC   shift, and go to state 18
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22
    '}'      shift, and go to state 23

    VarDecls     go to state 24
    MethodDecls  go to state 25
    VarDecl      go to state 26
    MethodDecl   go to state 27
    Type         go to state 28


State 15

    5 MainClass: CLASS ID '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    VOID  shift, and go to state 29


State 16

   10 ClassDecl: CLASS ID EXTENDS ID . '{' VarDecls MethodDecls '}'
   11          | CLASS ID EXTENDS ID . '{' MethodDecls '}'
   12          | CLASS ID EXTENDS ID . '{' VarDecls '}'
   13          | CLASS ID EXTENDS ID . '{' '}'

    '{'  shift, and go to state 30


State 17

   36 Type: ID .

    $default  reduce using rule 36 (Type)


State 18

   19 MethodDecl: PUBLIC . Type ID '(' FormalList ')' '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC . Type ID '(' FormalList ')' '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC . Type ID '(' FormalList ')' '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC . Type ID '(' FormalList ')' '{' RETURN Exp ';' '}'

    ID       shift, and go to state 17
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22

    Type  go to state 31


State 19

   33 Type: BOOLEAN .

    $default  reduce using rule 33 (Type)


State 20

   31 Type: INT . '[' ']'
   32     | INT .

    '['  shift, and go to state 32

    $default  reduce using rule 32 (Type)


State 21

   35 Type: VOID .

    $default  reduce using rule 35 (Type)


State 22

   34 Type: STRING .

    $default  reduce using rule 34 (Type)


State 23

    9 ClassDecl: CLASS ID '{' '}' .

    $default  reduce using rule 9 (ClassDecl)


State 24

    6 ClassDecl: CLASS ID '{' VarDecls . MethodDecls '}'
    8          | CLASS ID '{' VarDecls . '}'
   15 VarDecls: VarDecls . VarDecl

    ID       shift, and go to state 17
    PUBLIC   shift, and go to state 18
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22
    '}'      shift, and go to state 33

    MethodDecls  go to state 34
    VarDecl      go to state 35
    MethodDecl   go to state 27
    Type         go to state 28


State 25

    7 ClassDecl: CLASS ID '{' MethodDecls . '}'
   17 MethodDecls: MethodDecls . MethodDecl

    PUBLIC  shift, and go to state 18
    '}'     shift, and go to state 36

    MethodDecl  go to state 37


State 26

   14 VarDecls: VarDecl .

    $default  reduce using rule 14 (VarDecls)


State 27

   16 MethodDecls: MethodDecl .

    $default  reduce using rule 16 (MethodDecls)


State 28

   18 VarDecl: Type . ID ';'

    ID  shift, and go to state 38


State 29

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    MAIN  shift, and go to state 39


State 30

   10 ClassDecl: CLASS ID EXTENDS ID '{' . VarDecls MethodDecls '}'
   11          | CLASS ID EXTENDS ID '{' . MethodDecls '}'
   12          | CLASS ID EXTENDS ID '{' . VarDecls '}'
   13          | CLASS ID EXTENDS ID '{' . '}'

    ID       shift, and go to state 17
    PUBLIC   shift, and go to state 18
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22
    '}'      shift, and go to state 40

    VarDecls     go to state 41
    MethodDecls  go to state 42
    VarDecl      go to state 26
    MethodDecl   go to state 27
    Type         go to state 28


State 31

   19 MethodDecl: PUBLIC Type . ID '(' FormalList ')' '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type . ID '(' FormalList ')' '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC Type . ID '(' FormalList ')' '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type . ID '(' FormalList ')' '{' RETURN Exp ';' '}'

    ID  shift, and go to state 43


State 32

   31 Type: INT '[' . ']'

    ']'  shift, and go to state 44


State 33

    8 ClassDecl: CLASS ID '{' VarDecls '}' .

    $default  reduce using rule 8 (ClassDecl)


State 34

    6 ClassDecl: CLASS ID '{' VarDecls MethodDecls . '}'
   17 MethodDecls: MethodDecls . MethodDecl

    PUBLIC  shift, and go to state 18
    '}'     shift, and go to state 45

    MethodDecl  go to state 37


State 35

   15 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 15 (VarDecls)


State 36

    7 ClassDecl: CLASS ID '{' MethodDecls '}' .

    $default  reduce using rule 7 (ClassDecl)


State 37

   17 MethodDecls: MethodDecls MethodDecl .

    $default  reduce using rule 17 (MethodDecls)


State 38

   18 VarDecl: Type ID . ';'

    ';'  shift, and go to state 46


State 39

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' ID ')' '{' Statement '}' '}'

    '('  shift, and go to state 47


State 40

   13 ClassDecl: CLASS ID EXTENDS ID '{' '}' .

    $default  reduce using rule 13 (ClassDecl)


State 41

   10 ClassDecl: CLASS ID EXTENDS ID '{' VarDecls . MethodDecls '}'
   12          | CLASS ID EXTENDS ID '{' VarDecls . '}'
   15 VarDecls: VarDecls . VarDecl

    ID       shift, and go to state 17
    PUBLIC   shift, and go to state 18
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22
    '}'      shift, and go to state 48

    MethodDecls  go to state 49
    VarDecl      go to state 35
    MethodDecl   go to state 27
    Type         go to state 28


State 42

   11 ClassDecl: CLASS ID EXTENDS ID '{' MethodDecls . '}'
   17 MethodDecls: MethodDecls . MethodDecl

    PUBLIC  shift, and go to state 18
    '}'     shift, and go to state 50

    MethodDecl  go to state 37


State 43

   19 MethodDecl: PUBLIC Type ID . '(' FormalList ')' '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type ID . '(' FormalList ')' '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC Type ID . '(' FormalList ')' '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type ID . '(' FormalList ')' '{' RETURN Exp ';' '}'

    '('  shift, and go to state 51


State 44

   31 Type: INT '[' ']' .

    $default  reduce using rule 31 (Type)


State 45

    6 ClassDecl: CLASS ID '{' VarDecls MethodDecls '}' .

    $default  reduce using rule 6 (ClassDecl)


State 46

   18 VarDecl: Type ID ';' .

    $default  reduce using rule 18 (VarDecl)


State 47

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' ID ')' '{' Statement '}' '}'

    STRING  shift, and go to state 52


State 48

   12 ClassDecl: CLASS ID EXTENDS ID '{' VarDecls '}' .

    $default  reduce using rule 12 (ClassDecl)


State 49

   10 ClassDecl: CLASS ID EXTENDS ID '{' VarDecls MethodDecls . '}'
   17 MethodDecls: MethodDecls . MethodDecl

    PUBLIC  shift, and go to state 18
    '}'     shift, and go to state 53

    MethodDecl  go to state 37


State 50

   11 ClassDecl: CLASS ID EXTENDS ID '{' MethodDecls '}' .

    $default  reduce using rule 11 (ClassDecl)


State 51

   19 MethodDecl: PUBLIC Type ID '(' . FormalList ')' '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type ID '(' . FormalList ')' '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC Type ID '(' . FormalList ')' '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type ID '(' . FormalList ')' '{' RETURN Exp ';' '}'

    ID       shift, and go to state 17
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22

    $default  reduce using rule 25 (FormalList)

    FormalList  go to state 54
    Type        go to state 55


State 52

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' ID ')' '{' Statement '}' '}'

    '['  shift, and go to state 56


State 53

   10 ClassDecl: CLASS ID EXTENDS ID '{' VarDecls MethodDecls '}' .

    $default  reduce using rule 10 (ClassDecl)


State 54

   19 MethodDecl: PUBLIC Type ID '(' FormalList . ')' '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type ID '(' FormalList . ')' '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC Type ID '(' FormalList . ')' '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type ID '(' FormalList . ')' '{' RETURN Exp ';' '}'

    ')'  shift, and go to state 57


State 55

   23 FormalList: Type . ID FormalRests
   24           | Type . ID

    ID  shift, and go to state 58


State 56

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' ID ')' '{' Statement '}' '}'

    ']'  shift, and go to state 59


State 57

   19 MethodDecl: PUBLIC Type ID '(' FormalList ')' . '{' VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type ID '(' FormalList ')' . '{' Statements RETURN Exp ';' '}'
   21           | PUBLIC Type ID '(' FormalList ')' . '{' VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type ID '(' FormalList ')' . '{' RETURN Exp ';' '}'

    '{'  shift, and go to state 60


State 58

   23 FormalList: Type ID . FormalRests
   24           | Type ID .

    ','  shift, and go to state 61

    $default  reduce using rule 24 (FormalList)

    FormalRests  go to state 62
    FormalRest   go to state 63


State 59

    5 MainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . ID ')' '{' Statement '}' '}'

    ID  shift, and go to state 64


State 60

   19 MethodDecl: PUBLIC Type ID '(' FormalList ')' '{' . VarDecls Statements RETURN Exp ';' '}'
   20           | PUBLIC Type ID '(' FormalList ')' '{' . Statements RETURN Exp ';' '}'
   21           | PUBLIC Type ID '(' FormalList ')' '{' . VarDecls RETURN Exp ';' '}'
   22           | PUBLIC Type ID '(' FormalList ')' '{' . RETURN Exp ';' '}'

    ID                shift, and go to state 65
    RETURN            shift, and go to state 66
    IF                shift, and go to state 67
    BOOLEAN           shift, and go to state 19
    INT               shift, and go to state 20
    WHILE             shift, and go to state 68
    SYSTEMOUTPRINTLN  shift, and go to state 69
    VOID              shift, and go to state 21
    STRING            shift, and go to state 22
    '{'               shift, and go to state 70

    VarDecls    go to state 71
    VarDecl     go to state 26
    Statements  go to state 72
    Type        go to state 28
    Statement   go to state 73


State 61

   28 FormalRest: ',' . Type ID

    ID       shift, and go to state 17
    BOOLEAN  shift, and go to state 19
    INT      shift, and go to state 20
    VOID     shift, and go to state 21
    STRING   shift, and go to state 22

    Type  go to state 74


State 62

   23 FormalList: Type ID FormalRests .
   27 FormalRests: FormalRests . FormalRest

    ','  shift, and go to state 61

    $default  reduce using rule 23 (FormalList)

    FormalRest  go to state 75


State 63

   26 FormalRests: FormalRest .

    $default  reduce using rule 26 (FormalRests)


State 64
